kubernetes/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ticketingapi
  namespace: default
  labels:
    app: ticketingapi
spec:
  replicas: 1
  selector:
    matchLabels:
        app: ticketingapi
  template:
    metadata:
      name: ticketingapi
      labels:
        app: ticketingapi
    spec:
      containers:
      - name: ticketingapi
        image: denhamparry/ticketing.api:0.2.102-beta
        resources: {}
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: Always
        securityContext:
          privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
