kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ticketingapi
  labels:
    app: ticketingapi
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: ticketingapi
---
